Exceptions handling improved